# scalper

./: .gitattributes  .gitignore  Cargo.toml  README.md
config/: replay.example.toml  scalper.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  events.rs  execution.rs  gex.rs  health.rs  heatmap.rs  hidden.rs  historical.rs  latency.rs  lib.rs  orderbook.rs  orderflow.rs  paper.rs  profile.rs  research.rs  research_runner.rs  shutdown.rs  state.rs  storage.rs  supervisor.rs
crates/core/src/adapters/: binance.rs  binance_options.rs  mexc.rs  mod.rs
docs/: implementation-roadmap.md  observability-supabase-telegram.md  project-memory.legacy.md  project-memory.md  scalping-amt-gex-orderflow-spec.md
ops/alpine/: README.md  recover.sh
ops/alpine/etc/: nftables.nft
ops/alpine/etc/crontabs/: root
ops/alpine/etc/init.d/: scalper
ops/alpine/etc/local.d/: scalper-storage.start
ops/alpine/etc/network/: interfaces
ops/alpine/etc/scalper/: heartbeat.env.example
ops/alpine/etc/ssh/: sshd_config.hardening
ops/alpine/srv/scalper/config/: scalper.toml
supabase/: config.toml
supabase/functions/monitor-heartbeat/: index.ts
supabase/migrations/: 202607010001_server_monitor.sql
supabase/sql/: schedule_monitor_heartbeat.sql
