[workspace]
members = [
    "crates/core",
    "crates/app",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "UNLICENSED"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
arrow-array = "56"
arrow-schema = "56"
axum = "0.8"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
config = "0.15"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
humantime-serde = "1"
parquet = { version = "56", features = ["arrow"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
tokio-util = "0.7"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
