[package]
name = "scalper-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
chrono.workspace = true
config.workspace = true
futures-util.workspace = true
humantime-serde.workspace = true
parquet.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tracing.workspace = true
